--- a/src/main/resources/templates/layout/lefter.html
+++ b/src/main/resources/templates/layout/lefter.html
@@ -19,16 +19,7 @@
                     class="layui-nav-more"></span></a>
                 <dl class="layui-nav-child" style="display: block;">
                     <dd>
-                        <a lay-href="/view/member/memberList.html"><i class="layui-icon layui-icon layui-icon-user"></i>&emsp;<cite>会员列表</cite></a>
-                    </dd>
-                    <dd>
-                        <a lay-href="/view/member/checkError.html"><i class="layui-icon layui-icon layui-icon-tabs"></i>&emsp;<cite>检测异常列表</cite></a>
-                    </dd>
-                    <dd>
-                        <a lay-href="/view/member/caseHandle.html"><i class="layui-icon layui-icon layui-icon-form"></i>&emsp;<cite>病历列表</cite></a>
-                    </dd>
-                    <dd>
-                        <a lay-href="/view/member/consult.html"><i class="layui-icon layui-icon layui-icon-reply-fill"></i>&emsp;<cite>留言咨询</cite></a>
+                        <a lay-href="/view/member/memberList.html"><i class="layui-icon layui-icon layui-icon-user"></i>&emsp;<cite>证券配置列表</cite></a>
                     </dd>
                 </dl>
             </li>
