--- a/src/main/resources/templates/layout/lefter.html
+++ b/src/main/resources/templates/layout/lefter.html
@@ -19,7 +19,12 @@
                     class="layui-nav-more"></span></a>
                 <dl class="layui-nav-child" style="display: block;">
                     <dd>
-                        <a lay-href="/view/member/memberList.html"><i class="layui-icon layui-icon layui-icon-user"></i>&emsp;<cite>证券配置列表</cite></a>
+                        <a lay-href="/view/member/memberList.html"><i class="layui-icon layui-icon layui-icon-user"></i>&emsp;<cite>证券监控列表</cite></a>
+                    </dd>
+                </dl>
+                <dl class="layui-nav-child" style="display: block;">
+                    <dd>
+                        <a lay-href="/view/member/consult.html"><i class="layui-icon layui-icon layui-icon-set-fill"></i>&emsp;<cite>配置</cite></a>
                     </dd>
                 </dl>
             </li>
