完成部分前端功能

--- a/src/main/resources/templates/common/scripts.html
+++ b/src/main/resources/templates/common/scripts.html
@@ -13,4 +13,7 @@
     <script type="text/javascript" th:src="@{/assets/libs/echarts/echarts.min.js}"></script>
     <script type="text/javascript" th:src="@{/assets/libs/echarts/echartsTheme.js}"></script>
 </div>
-
+<div th:fragment="service">
+    <script type="text/javascript" th:src="@{/coral/js/homeService.js}"></script>
+    <script type="text/javascript" th:src="@{/coral/js/configService.js}"></script>
+</div>
