--- a/src/main/resources/templates/modules/index.html
+++ b/src/main/resources/templates/modules/index.html
@@ -257,7 +257,7 @@
 
         var HomeResultBlock = function () {
             this.load = function () {
-                var queryResult = homeService.getOrderDetail().data;
+                var queryResult = homeService.getHomeResult().data;
                 console.log(queryResult);
                 if(queryResult){
                     //api请求是否正常
